--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width">
   <title>Unit 0 - Practice</title>
   <style>
-    .mov1{ background-color: red}
-    .mov2{ background-color: aliceblue}
-    .mov3{ background-color: purple}
-    .mov4{ background-color: coral}
+    .mov1{ background-color: rgb(63, 157, 245)}
+    .mov2{ background-color: rgb(53, 226, 169)}
+    .mov3{ background-color: rgb(253, 24, 24)}
+    .mov4{ background-color: rgb(224, 48, 186)}
   </style>
 </head>
 
